# RieltorNotUA-API

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  example.env  gen_data.py  localhost.env  main.py  pyproject.toml  requirements.txt
.config/: api.env  api_example.env  db.env  localhost.env
.docker/: api.Dockerfile  api.Dockerfile.dockerignore  pg_db.Dockerfile
scripts/alembic/: create_alembic.sh  create_migration.sh  run_migration.sh
scripts/postgres/: create_dump.sh  restore.sh
src/: config.py
src/api/auth/: __init__.py  base.py  google.py  models.py
src/api/models/: __init__.py  auth.py  base.py  core.py  enums.py  offers.py  users.py
src/api/routers/: account.py  offers.py  query.py  search.py
src/api/tools/: geocoding.py
src/db/: query.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2449ddb27865_fix_type_at_offers_price.py  283b996b424a_fix_offers_model.py  44b2b4e672a7_fix_users_table_once_more.py  4962a90b31f2_init_migration.py  4967f7fa4afa_fix_users_table.py  5d3851bc0a4b_init_migration.py  9952c0c071e2_add_description.py  a8f5da198249_fix_author_column.py  d7574ffb0cd5_add_type_area_kwargs_columns_to_offers_.py
src/db/models/: __init__.py  offers.py  users.py
src/db/repo/: offers.py  users.py
tests/api_tests/: test_queries.py
