[tool.poetry]
name = "rieltor-api"
version = "0.1.0"
description = "API for RieltorNotUA"
authors = ["CBoYXD <python.rust.cpp@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.109.0"}
sqlalchemy = "^2.0.25"
environs = "^10.3.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg-binary = "^3.1.17"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
